fixed read more and header scrollbar

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,7 +2,7 @@ header{
   width: 100%;
   height: 100%;
   position: absolute;
-  overflow-y: auto;
+  //overflow-y: auto;
   z-index: 1000;
 }
 nav{
